[tool.poetry]
name = "langchain-tutorial"
version = "0.1.0"
description = ""
authors = ["nshian <ianng800@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.11"
python-dotenv = "^1.0.1"
openai = "^1.13.3"
langchain-openai = "^0.0.8"
streamlit = "^1.32.0"
langchainhub = "^0.1.15"
wikipedia = "^1.4.0"
numexpr = "^2.9.0"
google-search-results = "^2.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
